--- a/src/app/modules/developer/Components/query/query.component.html
+++ b/src/app/modules/developer/Components/query/query.component.html
@@ -11,7 +11,7 @@
             <div class="card p-5" style="border-radius: 15px;">
                 
                 <!-- Header with Background -->
-                <div style="background-color: #e7f1ff; border-radius: 15px 15px 0 0; padding: 20px;">
+                <div style=" border-radius: 15px 15px 0 0; padding: 20px;">
                     <div class="d-flex align-items-center">
                         <span class="badge badge-pill badge-light"
                             style="background-color: #ffe0e6; color: #ff3366; font-weight: bold;">Query<i class="bi bi-person-raised-hand"></i></span>
