--- a/src/app/modules/developer/Components/booking/booking.component.html
+++ b/src/app/modules/developer/Components/booking/booking.component.html
@@ -9,7 +9,7 @@
             <!-- Main Card -->
             <div class="card p-5" style="border-radius: 15px;">
                 <!-- Header with Background -->
-                <div style="background-color: #e7f1ff; border-radius: 15px 15px 0 0; padding: 20px;">
+                <div style=" border-radius: 15px 15px 0 0; padding: 20px;">
                     <div class="d-flex align-items-center">
                         <span class="badge badge-pill badge-light"
                             style="background-color: #ffe0e6; color: #ff3366; font-weight: bold;">1:1 Call</span>
